# BitirmeProjesi

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/services/: __init__.py  brats_lookup.py  file_manager.py
configs/: app_config.yaml  training_config.yaml
docker/: docker-compose.yml
docs/: PLAN-UNIVERSAL-segmentation-validation.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb
scripts/: download_data.py  evaluate.py  train.py
src/data/: augmentation.py  dataset.py  preprocessing.py  utils.py
src/inference/: __init__.py  postprocessing.py  predictor.py  validation.py
src/models/: __init__.py  attention_unet3d.py  blocks.py  losses.py  unet3d.py
src/training/: __init__.py  config.py  evaluator.py  trainer.py
tests/integration/: test_validation_e2e.py
tests/test_api/: conftest.py  test_app_config.py  test_endpoints.py  test_file_manager.py  test_results.py  test_segment.py  test_tasks.py  test_upload.py
tests/test_inference/: test_postprocessing.py  test_predictor.py  test_validation.py
tests/test_models/: test_attention_unet3d.py  test_blocks.py  test_losses.py  test_unet3d.py
tests/test_scripts/: test_evaluate.py  test_train.py
tests/test_training/: test_config.py  test_evaluator.py  test_trainer.py
(+31 files in other folders)
