[project]
name = "brain-tumor-segmentation"
version = "0.1.0"
description = "Beyin MR goruntulerinde U-Net ve Attention U-Net ile otomatik beyin tumor segmentasyonu"
requires-python = ">=3.10"
dependencies = [
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # Medical Imaging
    "nibabel>=5.0.0",
    "SimpleITK>=2.3.0",

    # Scientific Computing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Backend
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Task Queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",

    # Configuration
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",

    # Utilities
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "tensorboard>=2.14.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not slow"]
markers = [
    "slow: tests that run large data or end-to-end validation flows",
]
